kustomize/Mesh/overlays/external/httpbin-80/se-httpbin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: httpbin
  namespace: httpbin
spec:
  hosts:
  - ec2-34-251-198-112.eu-west-1.compute.amazonaws.com
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
